Correciones errores Sonar